# qed_rf

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
qedrf/: __init__.py  analysis.py  audit.py  benchmark.py  cli.py  diagnostics.py  experiments.py  manifest.py  oracle.py  rfcore.py  settings.py  train.py  validate.py
tests/: test_analysis.py  test_artifacts.py  test_cli.py  test_rf.py  test_science.py  test_settings.py
